deploy_minikube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: burgerclicker
---
# === BACKEND
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: burgerclicker
  labels: { app: backend }
spec:
  replicas: 1
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: matyrela/backendburger:v1
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: burgerclicker
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
---
# === FRONTEND BLUE
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
  namespace: burgerclicker
  labels: { app: frontend, color: blue }
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend, color: blue }
  template:
    metadata:
      labels: { app: frontend, color: blue }
    spec:
      containers:
        - name: nginx
          image: matyrela/clientburger:v1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: runtime-config
              mountPath: /usr/share/nginx/html/runtime-config
            - name: nginx-proxy
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: runtime-config
          configMap:
            name: frontend-config
            items:
              - key: config.js
                path: config.js
        - name: nginx-proxy
          configMap:
            name: nginx-proxy-conf
            items:
              - key: default.conf
                path: default.conf
---
# === FRONTEND GREEN
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
  namespace: burgerclicker
  labels: { app: frontend, color: green }
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend, color: green }
  template:
    metadata:
      labels: { app: frontend, color: green }
    spec:
      containers:
        - name: nginx
          image: matyrela/clientburger:v2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: runtime-config
              mountPath: /usr/share/nginx/html/runtime-config
            - name: nginx-proxy
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: runtime-config
          configMap:
            name: frontend-config
            items:
              - key: config.js
                path: config.js
        - name: nginx-proxy
          configMap:
            name: nginx-proxy-conf
            items:
              - key: default.conf
                path: default.conf
---
# === SERVICE del FRONTEND
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: burgerclicker
spec:
  type: NodePort
  selector:
    app: frontend
    color: blue
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
